add initial data for bars and options

--- a/plugin-examples/src/index.html
+++ b/plugin-examples/src/index.html
@@ -22,6 +22,7 @@
         <h2>Combined Examples</h2>
 		<ul>
 			<li><a href="./combined-examples/delta-brushable/">Delta Tooltip & Brushable Area Series</a></li>
+            <li><a href="./plugins/optionx/example/">OptionX</a></li>
 		</ul>
         <h2>Custom Series</h2>
 		<ul>
