--- a/plugin-examples/src/plugins/optionx/example/index.html
+++ b/plugin-examples/src/plugins/optionx/example/index.html
@@ -7,7 +7,8 @@
 		<link href="../../../examples-base.css" rel="stylesheet" />
 		<style>
 			#chart {
-				height: 450px;
+				height: 500px;
+				/* width: 100%; */
 				position: relative;
 			}
 			#buttons {
