Enhance Series Markers with Advanced Positioning and Price-Based Placement
- Added new marker positioning options: 'atPriceTop', 'atPriceBottom', 'atPriceMiddle'
- Implemented precise price-based marker positioning with optional 'price' property
- Extended marker types to support more flexible visualization
- Updated chart example with enhanced marker control panel
- Improved marker rendering and positioning logic in series markers primitive
- Added support for diamond marker shape
- Implemented price scale monitoring for dynamic marker updates

--- a/examples/index.html
+++ b/examples/index.html
@@ -88,6 +88,10 @@
                 <a href="price-markers.html">Price-Based Markers</a>
                 <p>Demonstrates how to position markers at specific price levels on the chart.</p>
             </li>
+            <li>
+                <a href="price-markers-example.html">Enhanced Price Markers</a>
+                <p>Advanced example showing precise marker positioning at exact price levels with new position types (atPriceTop, atPriceBottom, atPriceMiddle).</p>
+            </li>
         </ul>
     </div>
 </body>
