Remove standalone development distribution files from examples
- Deleted lightweight-charts.development.mjs from examples/dist
- Removed lightweight-charts.standalone.development.js from examples/dist
- Removed lightweight-charts.standalone.development.mjs from examples/dist
- Updated price-markers-example.html to use relative module import path
- Cleaned up unnecessary distribution files in the examples directory

--- a/examples/index.html
+++ b/examples/index.html
@@ -92,6 +92,10 @@
                 <a href="price-markers-example.html">Enhanced Price Markers</a>
                 <p>Advanced example showing precise marker positioning at exact price levels with new position types (atPriceTop, atPriceBottom, atPriceMiddle).</p>
             </li>
+            <li>
+                <a href="price-position-markers.html">Fixed Price Position Markers</a>
+                <p>Solution for marker positioning issues, showing how to properly use the price property with different series types.</p>
+            </li>
         </ul>
     </div>
 </body>
