--- a/debug/default/index.html
+++ b/debug/default/index.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body>
+  <body style="padding: 0; margin: 0">
+    <div id="container" style="position: absolute; width: 100%; height: 100%"></div>
     <script type="module" src="index.ts"></script>
   </body>
 </html>
