add alternative example for moving average

--- a/indicator-examples/src/index.html
+++ b/indicator-examples/src/index.html
@@ -32,6 +32,7 @@
 			<li><a href="./indicators/spread/example/">Spread</a></li>
 			<li><a href="./indicators/correlation/example/">Correlation</a></li>
 			<li><a href="./indicators/moving-average/example/">Moving average</a></li>
+			<li><a href="./indicators/moving-average/example/index2.html">Moving average Example 2</a></li>
 		</ul>
 		<h2>Combined Examples</h2>
 		<ul>
