split indicators into calculation and helper implementations

--- a/indicator-examples/src/index.html
+++ b/indicator-examples/src/index.html
@@ -29,10 +29,39 @@
 		</ul>
 		<h2>Indicators</h2>
 		<ul>
-			<li><a href="./indicators/spread/example/">Spread</a></li>
-			<li><a href="./indicators/correlation/example/">Correlation</a></li>
-			<li><a href="./indicators/moving-average/example/">Moving average</a></li>
-			<li><a href="./indicators/moving-average/example/index2.html">Moving average Example 2</a></li>
+			<li>Correlation</li>
+			<ul>
+				<li>
+					<a href="./indicators/correlation/example/direct.html"
+						>Direct calculation</a
+					>
+				</li>
+				<li>
+					<a href="./indicators/correlation/example/helper.html">Helper</a>
+				</li>
+			</ul>
+			<li>Spread</li>
+			<ul>
+				<li>
+					<a href="./indicators/spread/example/direct.html"
+						>Direct calculation</a
+					>
+				</li>
+				<li>
+					<a href="./indicators/spread/example/helper.html">Helper</a>
+				</li>
+			</ul>
+			<li>Moving Average</li>
+			<ul>
+				<li>
+					<a href="./indicators/moving-average/example/direct.html"
+						>Direct calculation</a
+					>
+				</li>
+				<li>
+					<a href="./indicators/moving-average/example/helper.html">Helper</a>
+				</li>
+			</ul>
 		</ul>
 		<h2>Combined Examples</h2>
 		<ul>
