--- a/indicator-examples/src/indicators/correlation/example/direct.html
+++ b/indicator-examples/src/indicators/correlation/example/direct.html
@@ -3,18 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Lightweight Charts - Moving Average indicator example</title>
+		<title>Lightweight Charts - Correlation indicator example</title>
 		<link href="../../../examples-base.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="chart"></div>
 		<div id="description">
-			<h1>Moving Average indicator</h1>
-			<p>
-				Moving Average (MA) with support for SMA, EMA, WMA, offset, and
-				smoothing.
-			</p>
+			<h1>Correlation indicator</h1>
+			<p>The correlation between two series.</p>
 		</div>
-		<script type="module" src="./example.ts"></script>
+		<script type="module" src="./direct.ts"></script>
 	</body>
 </html>
