--- a/indicator-examples/src/indicators/moving-average/example/helper.html
+++ b/indicator-examples/src/indicators/moving-average/example/helper.html
@@ -15,6 +15,6 @@
 				smoothing.
 			</p>
 		</div>
-		<script type="module" src="./example2.ts"></script>
+		<script type="module" src="./helper.ts"></script>
 	</body>
 </html>
