--- a/indicator-examples/src/indicators/correlation/example/helper.html
+++ b/indicator-examples/src/indicators/correlation/example/helper.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Lightweight Charts - Spread indicator example</title>
+		<title>Lightweight Charts - Correlation indicator example</title>
 		<link href="../../../examples-base.css" rel="stylesheet" />
 	</head>
 	<body>
 		<div id="chart"></div>
 		<div id="description">
-			<h1>Spread indicator</h1>
-			<p>The spread (difference) between two series.</p>
+			<h1>Correlation indicator</h1>
+			<p>The correlation between two series.</p>
 		</div>
-		<script type="module" src="./example.ts"></script>
+		<script type="module" src="./helper.ts"></script>
 	</body>
 </html>
