Add Average Price

--- a/indicator-examples/src/index.html
+++ b/indicator-examples/src/index.html
@@ -62,6 +62,17 @@
 					<a href="./indicators/moving-average/example/helper.html">Helper</a>
 				</li>
 			</ul>
+			<li>Average Price</li>
+			<ul>
+				<li>
+					<a href="./indicators/average-price/example/direct.html"
+						>Direct calculation</a
+					>
+				</li>
+				<li>
+					<a href="./indicators/average-price/example/helper.html">Helper</a>
+				</li>
+			</ul>
 		</ul>
 		<h2>Combined Examples</h2>
 		<ul>
