Add ratio example

--- a/indicator-examples/src/index.html
+++ b/indicator-examples/src/index.html
@@ -51,6 +51,17 @@
 					<a href="./indicators/spread/example/helper.html">Helper</a>
 				</li>
 			</ul>
+			<li>Ratio</li>
+			<ul>
+				<li>
+					<a href="./indicators/ratio/example/direct.html"
+						>Direct calculation</a
+					>
+				</li>
+				<li>
+					<a href="./indicators/ratio/example/helper.html">Helper</a>
+				</li>
+			</ul>
 			<li>Moving Average</li>
 			<ul>
 				<li>
