CLL-337: Median Price

--- a/indicator-examples/src/index.html
+++ b/indicator-examples/src/index.html
@@ -84,6 +84,17 @@
 					<a href="./indicators/average-price/example/helper.html">Helper</a>
 				</li>
 			</ul>
+			<li>Median Price</li>
+			<ul>
+				<li>
+					<a href="./indicators/median-price/example/direct.html"
+						>Direct calculation</a
+					>
+				</li>
+				<li>
+					<a href="./indicators/median-price/example/helper.html">Helper</a>
+				</li>
+			</ul>
 			<li>Weighted Close</li>
 			<ul>
 				<li>
