--- a/indicator-examples/src/combined-examples/seasonal/index.html
+++ b/indicator-examples/src/combined-examples/seasonal/index.html
@@ -31,6 +31,7 @@
 				<option>Spread</option>
 				<option>Correlation</option>
 				<option>Moving average</option>
+				<option>Median Price</option>
 			</select>
 		</div>
 		<script type="module" src="./example.ts"></script>
