CLL-338: Momentum plugin

--- a/indicator-examples/src/combined-examples/seasonal/index.html
+++ b/indicator-examples/src/combined-examples/seasonal/index.html
@@ -28,10 +28,10 @@
 			<p>Please select an indicator below</p>
 			<select id="indicator-select">
 				<option>None</option>
-				<option>Spread</option>
 				<option>Correlation</option>
-				<option>Moving average</option>
 				<option>Median Price</option>
+				<option>Momentum</option>
+				<option>Moving average</option>
 			</select>
 		</div>
 		<script type="module" src="./example.ts"></script>
