--- a/indicator-examples/src/index.html
+++ b/indicator-examples/src/index.html
@@ -95,6 +95,17 @@
 					<a href="./indicators/median-price/example/helper.html">Helper</a>
 				</li>
 			</ul>
+			<li>Momentum</li>
+			<ul>
+				<li>
+					<a href="./indicators/momentum/example/direct.html"
+						>Direct calculation</a
+					>
+				</li>
+				<li>
+					<a href="./indicators/momentum/example/helper.html">Helper</a>
+				</li>
+			</ul>
 			<li>Weighted Close</li>
 			<ul>
 				<li>
