CLL-340: Percent change

--- a/indicator-examples/src/combined-examples/seasonal/index.html
+++ b/indicator-examples/src/combined-examples/seasonal/index.html
@@ -32,6 +32,7 @@
 				<option>Median Price</option>
 				<option>Momentum</option>
 				<option>Moving average</option>
+				<option>Percent change</option>
 			</select>
 		</div>
 		<script type="module" src="./example.ts"></script>
