CLL-341: Product plugin

--- a/indicator-examples/src/index.html
+++ b/indicator-examples/src/index.html
@@ -117,6 +117,17 @@
 					<a href="./indicators/percent-change/example/helper.html">Helper</a>
 				</li>
 			</ul>
+			<li>Product</li>
+			<ul>
+				<li>
+					<a href="./indicators/product/example/direct.html"
+						>Direct calculation</a
+					>
+				</li>
+				<li>
+					<a href="./indicators/product/example/helper.html">Helper</a>
+				</li>
+			</ul>
 			<li>Weighted Close</li>
 			<ul>
 				<li>
