CLL-343: Sum plugin

--- a/indicator-examples/src/index.html
+++ b/indicator-examples/src/index.html
@@ -128,6 +128,17 @@
 					<a href="./indicators/product/example/helper.html">Helper</a>
 				</li>
 			</ul>
+			<li>Sum</li>
+			<ul>
+				<li>
+					<a href="./indicators/sum/example/direct.html"
+						>Direct calculation</a
+					>
+				</li>
+				<li>
+					<a href="./indicators/sum/example/helper.html">Helper</a>
+				</li>
+			</ul>
 			<li>Weighted Close</li>
 			<ul>
 				<li>
