--- a/indicator-examples/src/combined-examples/seasonal/index.html
+++ b/indicator-examples/src/combined-examples/seasonal/index.html
@@ -28,11 +28,17 @@
 			<p>Please select an indicator below</p>
 			<select id="indicator-select">
 				<option>None</option>
+				<option>Average price</option>
 				<option>Correlation</option>
-				<option>Median Price</option>
+				<option>Median price</option>
 				<option>Momentum</option>
 				<option>Moving average</option>
 				<option>Percent change</option>
+				<option>Product</option>
+				<option>Ratio</option>
+				<option>Spread</option>
+				<option>Sum</option>
+				<option>Weighted close</option>
 			</select>
 		</div>
 		<script type="module" src="./example.ts"></script>
