add volume indicator example to seasonals combined example

--- a/indicator-examples/src/combined-examples/seasonal/index.html
+++ b/indicator-examples/src/combined-examples/seasonal/index.html
@@ -39,6 +39,7 @@
 				<option>Spread</option>
 				<option>Sum</option>
 				<option>Weighted close</option>
+				<option>Volume</option>
 			</select>
 		</div>
 		<script type="module" src="./example.ts"></script>
