--- a/plugin-examples/src/plugins/expiring-price-alerts/example/index.html
+++ b/plugin-examples/src/plugins/expiring-price-alerts/example/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Lightweight Charts - Rectangle Plugin Example</title>
+		<title>Lightweight Charts - Expiring Price Alerts Plugin Example</title>
 		<link href="../../../examples-base.css" rel="stylesheet" />
 	</head>
 	<body>
