refactor: introduce a common interface and divide shape classes into multiple files

--- a/plugin-examples/src/plugins/drawing-tools/example/index.html
+++ b/plugin-examples/src/plugins/drawing-tools/example/index.html
@@ -32,6 +32,7 @@
 				A simple drawing tool for lines and rectangles. Click on the icon in the top left
 				corner to activate drawing mode, and then click on the chart to draw selected shape. 
 				The color and opacity can be changed using the color picker and the slider in the top toolbar.
+				You can also remove the drawn shapes by double clicking on them.
 			</p>
 		</div>
 		<script type="module" src="./example.ts"></script>
