add: add min-max-price-markers plugins

--- a/plugin-examples/src/index.html
+++ b/plugin-examples/src/index.html
@@ -54,6 +54,7 @@
             <li><a href="./plugins/volume-profile/example/">Volume Profile</a></li>
             <li><a href="./plugins/user-price-lines/example/">User Defined Price Lines</a></li>
             <li><a href="./plugins/user-price-alerts/example/">User Price Alerts (via crosshair menu)</a></li>
+            <li><a href="./plugins/min-max-price-markers/example/">Min Max Price Markers</a></li>
 		</ul>
 	</body>
 </html>
